--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -155,7 +155,19 @@
                     </div>
                     <div class="col-md-8">
                       <h5 style="color: #333;font-weight:700;font-size:1.1em;">Francie Moehring, Ph.D.</h4>
-                      <p style="font-size: 0.9em;">Francie received her Ph.D. in Cell Biology, Neurobiology and Anatomy at the Medical College of Wisconsin in 2018 but already has a track record of achievement in technology evaluation and development. She is a German citizen who moved to the United States when she was 17-years old, and received a B.S. in Biology from the University of Wisconsin-Milwaukee. During her Ph.D. Francie, has led 3 cross-departmental collaborations, all leading to high impact publications (i.e. eLife and JCI insight), has received 4 presentation awards, and was selected to give 3 oral presentations at national and international conferences. Her main thesis dissertation manuscript demonstrated that human skin is intimately involved in the sense touch and laid the groundwork for the study of the skin as a target for non-opioid pain treatments. In addition to her thesis work, Francie was the communications lead and co-manager of the biotech consultant group PICO, and contributed to a total of five projects. She is currently completing a fellowship at the Medical College of Wisconsin and also working as a freelance science journalist at the Pain Research Forum.</p>
+                        <p style="font-size: 0.9em;">Francie received her Ph.D. in Cell Biology, Neurobiology and Anatomy at the Medical College of
+                          Wisconsin in 2018 but already has a track record of achievement in technology evaluation and
+                          development. She is a German citizen who moved to the United States when she was 17-years old, and
+                          received a B.S. in Biology from the University of Wisconsin-Milwaukee. During her Ph.D. work Francie
+                          has led 3 cross-departmental collaborations, all leading to high impact publications (i.e. eLife and JCI
+                          insight), has received 4 presentation awards, was selected to give 3 oral presentations at national and
+                          international conferences and won the Outstanding Doctoral Dissertation Award from the Medical
+                          College of Wisconsin. Her main thesis dissertation manuscript demonstrated that human skin is
+                          intimately involved in the sense touch and laid the groundwork for the study of the skin as a target for
+                          non-opioid pain treatments. Despite her status as a graduate student, Francie was the communications
+                          lead and co-manager of the Postdoctoral Industry Consultants group (PICO), and contributed to a total
+                          of five projects. She is currently completing a fellowship at the Medical College of Wisconsin and also
+                        working as a freelance science journalist at the Pain Research Forum.</p>
                     </div>
                   </div>
                 </div>
