--- a/why-work-with-us/index.html
+++ b/why-work-with-us/index.html
@@ -187,7 +187,7 @@
                             <h4>DEDICATION</h4>
                           </div>
                           <div class="txt-info">
-                            <p>Every new technology has a human face and has the potential to improve lives. <span style="border-bottom:solid 1px #fff; ">Your Project Is Our Passion</span></p>
+                            <p>Every new technology has a human face and has the potential to improve lives. <span style="border-bottom:solid 1px #fff; ">Your Project Is Our Passion &trade;</span></p>
                           </div>                          
                         </a>
                       </div>
