--- a/our-process/index.html
+++ b/our-process/index.html
@@ -131,7 +131,7 @@
                 <div class="container">
                   <div class="row" >
                     <div class="col-5 flowchart-content" style="height: 200px;box-shadow: 7px 6px 35px #8888888c;">
-                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Introductions</h4>
+                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Introduction</h4>
                       <p>We will begin by asking for a non-confidential overview of your project or program and will answer your questions about our firm.</p>
                     </div>
                     <div class="col-7" style="padding-left: 0px;">
@@ -143,14 +143,14 @@
                       <img src="../img/connector4.png" style="padding-top: 130px;width: 66.6%;float:right;"/>
                     </div>
                     <div class="col-5 flowchart-content" style="height: 230px;box-shadow: -7px 6px 35px #8888888c;">
-                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Further Discussions</h4>
+                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Non-disclosure Agreement</h4>
                       <p>If both parties decide to continue we will execute a one-way non-disclosure agreement to facilitate a more substantive discussion about your project or program.</p>
                     </div>
                   </div>
                   <div class="row" style="margin-bottom: 5em;">
                     <div class="col-5 flowchart-content" style="height: 200px;box-shadow: 7px 6px 35px #8888888c;">
-                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Consultation Agreement</h4>
-                      <p>Pathway Biotechnology will then draft a proposed scope of work, and upon approval, will execute a consulting agreement.</p>
+                      <h4 style="padding-bottom: 0px;padding-top: 31px;padding-left: 20px;font-weight: 900;color: #000;font-size: 1.5em;margin-bottom: 0.45em;">Consulting Agreement</h4>
+                      <p>Pathway Biotechnology will then draft a proposed scope of work, and upon approval, will execute a consulting agreement which includes payment terms.</p>
                     </div>
                     <div class="col-7">
                       
