--- a/welcome/index.html
+++ b/welcome/index.html
@@ -128,7 +128,25 @@
          <div id="main" class="site-main">
             <div id="primary" class="content-area">
                <div id="content" class="site-content" role="main">
-		
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12">
+                      <p>Thank you for visiting the Pathway Biotechnology website. I chose the name because each of us, as well
+                        as each new technology, has a pathway. I began my career as a university professor, then moved onto
+                        positions in big pharma, biotech startups, investment, contract research, and technology transfer. Each
+                        role provided me with unique skills and insight and collectively formed my personal pathway. Each
+                        member of the Pathway Biotechnology team also has a personal pathway, and I encourage you to
+                        review them on our Who We Are page. New technologies have pathways that begin with ideation and
+                        hopefully end with commercialized products, and identifying and understanding each component of
+                        these pathways is critical to achieve success. Every new technology has the potential to change lives,
+                        and we would welcome the opportunity to be your trusted partner on your pathway. At Pathway
+                      Biotechnology, your project is our passion!</p>
+                    </div>
+                    <div class="col-12" style="padding-top:30px;">
+                      <p style="font-weight: 600;color: #444;">Edward E. Diehl, Ph.D. <br> Founder, Pathway Biotechnology</p>
+                    </div>
+                  </div>
+                </div>
                </div>
             </div>
          </div>
