--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
    <div id="utilitybar" class="utilitybar colored-bg">
      <div class="ubarinnerwrap">
       <div class="socialicons">
-        <ul class="social"><li><a href="" title="linkedin" target="_blank"><i class="genericon socico genericon-linkedin"></i></a></li><li><a href="" title="facebook" target="_blank"><i class="genericon socico genericon-facebook"></i></a></li><li><a href="" title="twitter" target="_blank"><i class="genericon socico genericon-twitter"></i></a></li></ul>                
+        <ul class="social"><li><a href="" title="linkedin" target="_blank"><i class="genericon socico genericon-linkedin"></i></a>
+        </li>
+        </ul>                
       </div>
       <div class="topphone tx-topphone">
         <i class="topbarico genericon genericon-phone"></i>(262) 456-0489
@@ -222,7 +224,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 id="home-content-main">From early-stage technology evaluation to marketing plans, we are your pre-commercialization experts</h2>
+              <h2 id="home-content-main" class="section-title2">From early-stage technology evaluation to marketing plans, we are your pre-commercialization experts</h2>
             </div>
             <div class="col-12">
               <p id="home-content-sub">Drugs, diagnostics, medical devices, medical software and research tools</p>
