--- a/welcome/index.html
+++ b/welcome/index.html
@@ -59,8 +59,6 @@
                <div class="socialicons">
                   <ul class="social">
                      <li><a href="" title="linkedin" target="_blank"><i class="genericon socico genericon-linkedin"></i></a></li>
-                     <li><a href="" title="facebook" target="_blank"><i class="genericon socico genericon-facebook"></i></a></li>
-                     <li><a href="" title="twitter" target="_blank"><i class="genericon socico genericon-twitter"></i></a></li>
                   </ul>
                </div>
                <div class="topphone tx-topphone">
@@ -131,19 +129,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-12">
-                      <p>Thank you for visiting the Pathway Biotechnology website. I chose the name because each of us, as well
-                        as each new technology, has a pathway. I began my career as a university professor, then moved onto
-                        positions in big pharma, biotech startups, investment, contract research, and technology transfer. Each
-                        role provided me with unique skills and insight and collectively formed my personal pathway. Each
-                        member of the Pathway Biotechnology team also has a personal pathway, and I encourage you to
-                        review them on our Who We Are page. New technologies have pathways that begin with ideation and
-                        hopefully end with commercialized products, and identifying and understanding each component of
-                        these pathways is critical to achieve success. Every new technology has the potential to change lives,
-                        and we would welcome the opportunity to be your trusted partner on your pathway. At Pathway
-                      Biotechnology, your project is our passion!</p>
+                      <p class="welcome-text">Thank you for visiting the Pathway Biotechnology website. I chose that name because each of us, as well as each new technology, has a pathway. I began my career as a university professor, then moved onto positions in big pharma, biotech startups, investment, contract research, and technology transfer. Each role provided me with unique skills and insight and collectively formed my personal pathway. Each member of our team also has a personal pathway, and I encourage you to review our Who We Are page. New technologies begin with ideation and hopefully end with commercialized products, and identifying and understanding each component of these pathways is critical to achieve success. Every new technology has the potential to change lives, and we would welcome the opportunity to be your trusted partner on your pathway. At Pathway Biotechnology, your project is our passion!</p>
                     </div>
                     <div class="col-12" style="padding-top:30px;">
-                      <p style="font-weight: 600;color: #444;">Edward E. Diehl, Ph.D. <br> Founder, Pathway Biotechnology</p>
+                      <p class="welcome-text" style="font-weight: 600;color: #444;">Edward E. Diehl, Ph.D. <br> Founder, Pathway Biotechnology</p>
                     </div>
                   </div>
                 </div>
