--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -59,8 +59,6 @@
                <div class="socialicons">
                   <ul class="social">
                      <li><a href="" title="linkedin" target="_blank"><i class="genericon socico genericon-linkedin"></i></a></li>
-                     <li><a href="" title="facebook" target="_blank"><i class="genericon socico genericon-facebook"></i></a></li>
-                     <li><a href="" title="twitter" target="_blank"><i class="genericon socico genericon-twitter"></i></a></li>
                   </ul>
                </div>
                <div class="topphone tx-topphone">
@@ -130,32 +128,33 @@
                <div id="content" class="site-content" role="main">
                 <div class="container">
                   <div class="row">
-                    <div class="col-md-4">
-                      <img style="padding-top: 4px;" src="../img/Eddie.jpg"/>
+                    <div class="col-lg-4">
+                      <img style="padding-top: 4px;padding-bottom:20px;" src="../img/Eddie.jpg"/>
                     </div>
-                    <div class="col-md-8" style="padding-bottom: 1rem;">
+                    <div class="col-lg-8" style="padding-bottom: 1rem;">
                       <h5 style="color: #333;font-weight:700;font-size: 1.1em">Edward E. Diehl, Ph.D.</h4>
-                      <p style="font-size: 0.9em;">Eddie has more than 25 years of experience evaluating and developing life science technologies. He holds a B.S. in Biology from the Pennsylvania State University and a Ph.D. in Physiology and Biophysics from the University of Iowa. He completed a National Cancer Institute sponsored fellowship in Biochemistry and Molecular Biology at the Mayo Clinic and a fellowship in Pharmacology at Duke University. He has held two faculty positions – Assistant Professor of Natural and Health Sciences at Barry University and Research Assistant Professor at the Northwestern University School of Medicine. He was subsequently hired as a Senior Scientist in the Diagnostic Division of Abbott Laboratories where his work contributed to the validation and launch of seven cancer diagnostic tests on three instrument platforms. He moved on to entrepreneurial roles at several startups and a CRO where he participated in R&D, investment, licensing, and business and intellectual property development efforts. He was a member of the Technology Evaluation Committee for the Office of Technology Development at the Medical College of Wisconsin and subsequently hired as their Intellectual Property Marketing Manager.</p>
+                      <p class="wwa-text">Eddie has more than 25 years of experience evaluating and developing life science technologies. He holds a B.S. in Biology from the Pennsylvania State University and a Ph.D. in Physiology and Biophysics from the University of Iowa. He completed a National Cancer Institute sponsored fellowship in Biochemistry and Molecular Biology at the Mayo Clinic and a fellowship in Pharmacology at Duke University. He has held two faculty positions – Assistant Professor of Natural and Health Sciences at Barry University and Research Assistant Professor at the Northwestern University School of Medicine. He was subsequently hired as a Senior Scientist in the Diagnostic Division of Abbott Laboratories where his work contributed to the validation and launch of seven cancer diagnostic tests on three instrument platforms. He moved on to entrepreneurial roles at several startups and a CRO where he participated in R&D, investment, licensing, and business and intellectual property development efforts. He was a member of the Technology Evaluation Committee for the Office of Technology Development at the Medical College of Wisconsin and subsequently hired as their Intellectual Property Marketing Manager.</p>
                     </div>
                   </div>
                   <hr>
                   <div class="row" style="padding-top:1rem;padding-bottom: 1rem;">
-                    <div class="col-md-4">
-                      <img style="padding-top: 4px;" src="../img/dan.jpg"/>
+                    <div class="col-lg-4">
+                      <img style="padding-top: 4px;padding-bottom:20px;" src="../img/dan.jpg"/>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-lg-8">
                       <h5 style="color: #333;font-weight:700;font-size:1.1em;">Daniel F. Walsh, Jr.</h4>
-                      <p style="font-size: 0.9em;">For more than 25 years, Dan has advised hundreds of companies in the medical technology industry, including: Johnson & Johnson, Pfizer, Phillips, PTV Sciences, Baxter, GSK, and Schering AG. His focus is on the successful development, scale-up, launch and delivery of breakthrough medical technologies that both benefit patients and manage the exploding cost of the healthcare system. These technologies span a number of biomedical disciplines, including cardiovascular, neurology, endocrinology, orthopedics, MIS & general surgery, gastrointestinal (GI), dental, ophthalmology, hematology, women’s health, in vitro diagnostics, and telehealth/ehealth.</p>
+                      <p class="wwa-text">For more than 25 years, Dan has advised hundreds of companies in the medical technology industry, including: Johnson & Johnson, Pfizer, Phillips, PTV Sciences, Baxter, GSK, and Schering AG. His focus is on the successful development, scale-up, launch and delivery of breakthrough medical technologies that both benefit patients and manage the exploding cost of the healthcare system. These technologies span a number of biomedical disciplines, including cardiovascular, neurology, endocrinology, orthopedics, MIS & general surgery, gastrointestinal (GI), dental, ophthalmology, hematology, women’s health, in vitro diagnostics, and telehealth/ehealth.</p>
                     </div>
                   </div>
+                  <!--
                   <hr>
                   <div class="row" style="padding-top:1rem; padding-bottom: 1rem;">
                     <div class="col-md-4">
                       <img style="padding-top: 4px;" src="../img/Francie.jpg"/>
                     </div>
                     <div class="col-md-8">
-                      <h5 style="color: #333;font-weight:700;font-size:1.1em;">Francie Moehring, Ph.D.</h4>
-                        <p style="font-size: 0.9em;">Francie received her Ph.D. in Cell Biology, Neurobiology and Anatomy at the Medical College of
+                      <h5 style="color: #333;font-weight:700;font-size:1.1em;">Francie Moehring, Ph.D.</h5>
+                        <p class="wwa-text">Francie received her Ph.D. in Cell Biology, Neurobiology and Anatomy at the Medical College of
                           Wisconsin in 2018 but already has a track record of achievement in technology evaluation and
                           development. She is a German citizen who moved to the United States when she was 17-years old, and
                           received a B.S. in Biology from the University of Wisconsin-Milwaukee. During her Ph.D. work Francie
@@ -170,6 +169,7 @@
                         working as a freelance science journalist at the Pain Research Forum.</p>
                     </div>
                   </div>
+                  -->
                 </div>
                </div>
             </div>
