--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -60,8 +60,6 @@
                <div class="socialicons">
                   <ul class="social">
                      <li><a href="" title="linkedin" target="_blank"><i class="genericon socico genericon-linkedin"></i></a></li>
-                     <li><a href="" title="facebook" target="_blank"><i class="genericon socico genericon-facebook"></i></a></li>
-                     <li><a href="" title="twitter" target="_blank"><i class="genericon socico genericon-twitter"></i></a></li>
                   </ul>
                </div>
                <div class="topphone tx-topphone">
@@ -144,6 +142,7 @@
                     <div class="input string required contact_name field_with_errors">
                       <label class="string required">Message</label>
                       <textarea class="contact" name="message" placeholder=""></textarea>
+                      <p id="disclaimer">* Do not send confidential information through this contact form</p>
                     </div>
                     <input type="hidden" name="_next" value="../success-message/index.html" />
                     <div class="col-sm-3"></div>
@@ -167,13 +166,13 @@
                 </div>
                 <div class="col-lg-6">
                   <div class="row">
-                    <div class="col-md-6" style="height:156px;">
+                    <div class="col-md-6">  <!--style="height:156px;"-->
                       <iframe width="100%" height="150px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBFLvxgYpIi1bGVqNPSSt7k8VvR_9fsULo&amp;q=Milwaukee,+WI">
                       </iframe>
                     </div>
-                    <div class="col-md-6" style="height:156px;">
+                    <div class="col-md-6">  <!--style="height:156px;"-->
                       <h4 class="sub-title">Pathway Biotechnology</h4>
-                      <p class="content" style="font-size:16px;color: rgba(0, 0, 0, 0.86);">700 N Art Museum Dr<br> Milwaukee, WI 53202</p>
+                      <p class="content" style="font-size:16px;color: rgba(0, 0, 0, 0.86);">Milwaukee, WI 53233</p>
                     </div>
                     <div id="contact-info" class="col-md-12">
                       <p style="margin-bottom: 0.3rem;"><i class="topbarico genericon genericon-phone" id="contact-icons"></i>(262) 456-0489</p>
