--- a/our-process/index.html
+++ b/our-process/index.html
@@ -63,7 +63,7 @@
                   </ul>
                </div>
                <div class="topphone tx-topphone">
-                  <i class="topbarico genericon genericon-phone"></i>(262) 456-0489
+                  <i class="topbarico genericon genericon-phone"></i><x style="color:#fff!important">(262) 456-0489</x>
                </div>
                <div class="topphone tx-topmail">
                   <i class="topbarico genericon genericon-mail"></i>ediehl@pathwaybiotechnology.com
