--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </ul>                
       </div>
       <div class="topphone tx-topphone">
-        <i class="topbarico genericon genericon-phone"></i>(262) 456-0489
+        <i class="topbarico genericon genericon-phone"></i><x style="color:#fff!important;text-decoration: none;">(262) 456-0489</x>
       </div>
       <div class="topphone tx-topmail">
         <i class="topbarico genericon genericon-mail"></i>ediehl@pathwaybiotechnology.com</div>
@@ -337,7 +337,7 @@
         </div>
         <div class="col-md-6">
           <h3 class="widget-title">Contact</h3>
-          <div class="footer-text">Call us:   (262) 456-0489 </div>
+          <div class="footer-text" style="text-decoration: none;">Call us:   (262) 456-0489 </div>
           <div class="footer-text">Mail us:   ediehl@pathwaybiotechnology.com</div>
           <br/>
           <br/>
