--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
 
   <title>Pathway Biotechnology</title>
-
+  <meta name="format-detection" content="telephone=no">
   <meta name="description" content="Burks Search is an Executive Recruiter with a passion to place successful people into jobs they love. We will discuss your hiring needs. Visit our contact page to reach us anytime."/>
   <link rel="canonical" href="index.html" />
   <meta property="og:locale" content="en_US" />
