updated success message

--- a/deliverables/index.html
+++ b/deliverables/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
    <head>
       <meta charset="UTF-8">
+      <meta name="format-detection" content="telephone=no">
       <meta name="viewport" content="width=device-width">
       <title>Pathway Biotechnology</title>
       <meta name="description" content="Burks Search is an Executive Recruiter with a passion to place successful people into jobs they love. We will discuss your hiring needs. Visit our contact page to reach us anytime."/>
