--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
    <head>
+      <meta name="format-detection" content="telephone=no">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width">
       <title>Pathway Biotechnology</title>
