--- a/deliverables/index.html
+++ b/deliverables/index.html
@@ -131,7 +131,7 @@
                 <div class="container">
                 <div class="row">
                   <div class="col-12">
-                    <h2 class="section-title2">We can perform any or all of the activities associated with each deliverable</h2>
+                    <h2 class="section-title2">Please contact us if your requirement is not listed</h2>
                   </div>
 
                   <div class="col-12">
@@ -227,7 +227,8 @@
                       </div>
                       <div class="col-10 deliverable-content">
                         <p class="content-title">Marketing Plans</p>
-                        <p class="content-subtxt">For one technology or your entire portfolio</p>
+                        <p class="content-subtxt">we can create non-confidential technology summaries and a marketing strategy for
+one technology or your entire portfolio</p>
                       </div>
                     </div>
                     <div class="border-top" id="injection-molding-border" style="display: none;">
@@ -235,7 +236,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12">
+                  <div class="col-12" id="media-plans">
                     <div class="clickable row">
                       <div class="col-2 icon-container">
                         <ul class="list">
@@ -247,7 +248,9 @@
                       </div>
                       <div class="col-10 deliverable-content">
                         <p class="content-title">Media Plans</p>
-                        <p class="content-subtxt">For one technology or your entire portfolio</p>
+                        <p class="content-subtxt">news releases and overall media strategy for one technology or your entire portfolio
+Social media promotion – creation of Facebook and Twitter presence, LinkedIn Company Page or
+Showcase Page, and content development</p>
                       </div>
                     </div>
                     <div class="border-top" id="injection-molding-border" style="display: none;">
