--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <h2 id="home-content-main" class="section-title2">From early-stage technology evaluation to marketing plans, we are your pre-commercialization experts</h2>
             </div>
             <div class="col-12">
-              <p id="home-content-sub">Drugs, diagnostics, medical devices, medical software and research tools</p>
+              <p id="home-content-sub">Drugs, diagnostics, medical devices, medical software, research tools, and research reagents</p>
             </div>
             <!--
             <div class="col-md-4">
