--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -134,7 +134,18 @@
                     </div>
                     <div class="col-lg-8" style="padding-bottom: 1rem;">
                       <h5 style="color: #333;font-weight:700;font-size: 1.1em">Edward E. Diehl, Ph.D.</h4>
-                      <p class="wwa-text">Eddie has more than 25 years of experience evaluating and developing life science technologies. He holds a B.S. in Biology from the Pennsylvania State University and a Ph.D. in Physiology and Biophysics from the University of Iowa. He completed a National Cancer Institute sponsored fellowship in Biochemistry and Molecular Biology at the Mayo Clinic and a fellowship in Pharmacology at Duke University. He has held two faculty positions – Assistant Professor of Natural and Health Sciences at Barry University and Research Assistant Professor at the Northwestern University School of Medicine. He was subsequently hired as a Senior Scientist in the Diagnostic Division of Abbott Laboratories where his work contributed to the validation and launch of seven cancer diagnostic tests on three instrument platforms. He moved on to entrepreneurial roles at several startups and a CRO where he participated in R&D, investment, licensing, and business and intellectual property development efforts. He was a member of the Technology Evaluation Committee for the Office of Technology Development at the Medical College of Wisconsin and subsequently hired as their Intellectual Property Marketing Manager.</p>
+                      <p class="wwa-text">Eddie has more than 25 years of experience evaluating and developing life science technologies. He
+holds a B.S. in Biology from the Pennsylvania State University and a Ph.D. in Physiology and Biophysics
+from the University of Iowa. He completed a National Cancer Institute sponsored fellowship in
+Biochemistry and Molecular Biology at the Mayo Clinic and a fellowship in Pharmacology at Duke
+University. He held two faculty positions – Assistant Professor of Natural and Health Sciences at Barry
+University and Research Assistant Professor at the Northwestern University School of Medicine. He was
+subsequently hired as a Senior Scientist in the Diagnostic Division of Abbott Laboratories where his work
+contributed to the validation and launch of seven cancer diagnostic tests on three instrument platforms.
+He moved on to entrepreneurial roles at several startups and a CRO where he participated in R&amp;D,
+investment, licensing, and business and intellectual property development efforts. He was a member of
+the Technology Evaluation Committee for the Office of Technology Development at the Medical College
+of Wisconsin and subsequently hired as their Intellectual Property Marketing Manager.</p>
                     </div>
                   </div>
                   <hr>
@@ -144,7 +155,13 @@
                     </div>
                     <div class="col-lg-8">
                       <h5 style="color: #333;font-weight:700;font-size:1.1em;">Daniel F. Walsh, Jr.</h4>
-                      <p class="wwa-text">For more than 25 years, Dan has advised hundreds of companies in the medical technology industry, including: Johnson & Johnson, Pfizer, Phillips, PTV Sciences, Baxter, GSK, and Schering AG. His focus is on the successful development, scale-up, launch and delivery of breakthrough medical technologies that both benefit patients and manage the exploding cost of the healthcare system. These technologies span a number of biomedical disciplines, including cardiovascular, neurology, endocrinology, orthopedics, MIS & general surgery, gastrointestinal (GI), dental, ophthalmology, hematology, women’s health, in vitro diagnostics, and telehealth/ehealth.</p>
+                      <p class="wwa-text">For more than 25 years, Dan has advised hundreds of companies in the medical technology industry
+including: Johnson &amp; Johnson, Pfizer, Phillips, PTV Sciences, Baxter, GSK, and Schering AG. His focus is on
+the successful development, scale-up, launch and delivery of breakthrough medical technologies that
+both benefit patients and manage the exploding cost of the healthcare system. These technologies span
+a number of biomedical disciplines including cardiovascular, neurology, endocrinology, orthopedics, MIS
+&amp; general surgery, gastrointestinal (GI), dental, ophthalmology, hematology, women’s health, in vitro
+diagnostics, and telehealth/ehealth.</p>
                     </div>
                   </div>
                   <!--
