--- a/why-work-with-us/index.html
+++ b/why-work-with-us/index.html
@@ -139,7 +139,7 @@
                             <h4>LIFE SCIENCE FOCUS</h4>
                           </div>
                           <div class="txt-info">
-                            <p>Drugs, diagnostics, medical devices, medical software, research tools and reagents</p>
+                            <p>Drugs, diagnostics, medical devices, medical software, research tools, and research reagents</p>
                           </div>
                         </a>
                       </div>
@@ -169,7 +169,7 @@
                             <h4>EXPERIENCE</h4>
                           </div>
                           <div class="txt-info">
-                            <p>Our team collectively has over 50 years of experience in developing, evaluating, and comercializing technology. We have held faculty, large pharma, biotech, contract research lab, investment, and technology transfer positions, and put that experience to work for you.</p>
+                            <p>Our team collectively has over 50 years of experience in developing, evaluating, and commercializing technology. We have held faculty, large pharma, biotech, contract research lab, investment, and technology transfer positions, and put that experience to work for you.</p>
                           </div>                        
                         </a>
                       </div>
@@ -216,7 +216,7 @@
                             <h4>FLEXIBILITY</h4>
                           </div>
                           <div class="txt-info">
-                            <p>We view each project as a unique undertaking and offer flexible pricing – please contact us</p>
+                            <p>We view each project as a unique undertaking and offer flexible pricing – please contact us.</p>
                           </div>                          
                         </a>
                       </div>
