--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -168,19 +168,19 @@
                 <div class="col-lg-6">
                   <div class="row">
                     <div class="col-md-6">  <!--style="height:156px;"-->
-                      <iframe width="100%" height="150px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBFLvxgYpIi1bGVqNPSSt7k8VvR_9fsULo&amp;q=Milwaukee,+WI">
+                      <iframe width="100%" height="150px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBFLvxgYpIi1bGVqNPSSt7k8VvR_9fsULo&amp;q=Racine,+WI">
                       </iframe>
                     </div>
                     <div class="col-md-6">  <!--style="height:156px;"-->
                       <h4 class="sub-title">Pathway Biotechnology</h4>
-                      <p class="content" style="font-size:16px;color: rgba(0, 0, 0, 0.86);">Milwaukee, WI 53233</p>
+                      <p class="content" style="font-size:16px;color: rgba(0, 0, 0, 0.86);">Racine, WI 53401</p>
                     </div>
                     <div id="contact-info" class="col-md-12">
                       <p style="margin-bottom: 0.3rem;"><i class="topbarico genericon genericon-phone" id="contact-icons"></i>(262) 456-0489</p>
                       <p><i class="topbarico genericon genericon-mail" id="contact-icons"></i>ediehl@pathwaybiotechnology.com</p>
                     </div>
                     <div style="padding-top:25px;" class="col-md-12">
-                      <p style="font-size: 12px;">We accept major credit cards, Pay Pal, and U.S. money orders</p>
+                      <p style="font-size: 12px;">We accept major credit cards, PayPal, and U.S. money orders</p>
                     </div>
                   </div>
                 </div>
