--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -134,7 +134,13 @@
                     <p class="wwd-text" style="font-weight: 700;color:#333;padding-bottom:0.3em">Are you an IP attorney, industry representative or investor, evaluating the science, value, comps, and market potential for intellectual property?</p>
                     <p class="wwd-text" style="font-weight: 700;color:#333;padding-bottom:0.3em">Do you need technology scouting?</p>
                     <p class="wwd-text" style="padding-bottom:0.5rem;font-weight: 700;color:#333">Do you need a complete marketing plan, target identification and ongoing outreach?</p>            
-                    <p class="wwd-text" style="padding-top:1rem;">Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-patent marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities. Our experience in faculty, pharmaceutical, biotechnology, contract research, business development and technology transfer positions gives us unique experience, creativity and credibility. Let us help you maximize the potential of intellectual property, whether it was developed in-house or externally.</p>
+                    <p class="wwd-text" style="padding-top:1rem;">Our firm offers a full suite of pre-patent life science technology evaluation, including technology
+                      validation, market analysis, comps, and post-patent marketing plans. Our clients include the
+                      pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and
+                      universities. Our experience in faculty, pharmaceutical, biotechnology, contract research, business
+                      development and technology transfer positions gives us unique skills, creativity and credibility. Let us
+                      help you maximize the potential of intellectual property, whether it was developed in-house or
+                    externally.</p>
                   </div>
                 </div>
               </div>
