--- a/deliverables/index.html
+++ b/deliverables/index.html
@@ -5,12 +5,12 @@
       <meta name="format-detection" content="telephone=no">
       <meta name="viewport" content="width=device-width">
       <title>Pathway Biotechnology</title>
-      <meta name="description" content="Burks Search is an Executive Recruiter with a passion to place successful people into jobs they love. We will discuss your hiring needs. Visit our contact page to reach us anytime."/>
       <link rel="canonical" href="index.html" />
       <meta property="og:locale" content="en_US" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Pathway Biotechnology" />
-      <meta property="og:description" content="Burks Search is an Executive Recruiter with a passion to place successful people into jobs they love. We will discuss your hiring needs. Visit our contact page to reach us anytime." />
+      <meta property="og:description" content="Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-patent marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities." />
+      <meta name="description" content="Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-patent marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities."/>
       <meta property="og:url" content="https://www.pathwaybiotechnology.com/deliverables/" />
       <meta property="og:site_name" content="PATHWAY BIOTECHNOLOGY" />
 
