--- a/deliverables/index.html
+++ b/deliverables/index.html
@@ -98,7 +98,7 @@
                             <a href="../our-process/"><div>Our Process</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467 current_page_item current_page_parent">
-                            <a href="/"><div>Deliverables</div></a>
+                            <a href=""><div>Deliverables</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                             <a href="../contact-us/"><div>Contact Us</div></a>
@@ -320,7 +320,7 @@ Showcase Page, and content development</p>
            </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
-               <a href="/">Deliverables</a>
+               <a href="">Deliverables</a>
               </div>    
             </div>
          <div class="col-4 footer-nav">
@@ -390,7 +390,7 @@ Showcase Page, and content development</p>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../who-we-are/">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../our-process/">Our Process</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="/">Deliverables</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="">Deliverables</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="../contact-us/">Contact Us</a></li>
   </ul>
    </div>
