--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -85,7 +85,7 @@
                             <a href="../welcome/"><div>Welcome</div></a>
                           </li>
                           <li id="menu-item-466" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466 current_page_item current_page_parent">
-                            <a href="/"><div>What We Do</div></a>
+                            <a href=""><div>What We Do</div></a>
                           </li>
                           <li id="menu-item-468" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468">
                             <a href="../who-we-are/"><div>Who We Are</div></a>
@@ -183,7 +183,7 @@
          </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
-               <a href="/">What We Do</a>
+               <a href="">What We Do</a>
               </div>    
             </div>
             <div class="col-4 footer-nav">
@@ -229,7 +229,7 @@
   <ul id="wprmenu_menu_ul">
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-469"><a href="../">Home</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="../welcome/">Welcome</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="/">What We Do</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="">What We Do</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../who-we-are/">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../our-process/">Our Process</a></li>
