--- a/why-work-with-us/index.html
+++ b/why-work-with-us/index.html
@@ -92,7 +92,7 @@
                             <a href="../who-we-are/"><div>Who We Are</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467 current_page_item current_page_parent">
-                            <a href="/"><div>Why Work With Us</div></a>
+                            <a href=""><div>Why Work With Us</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                             <a href="../our-process/"><div>Our Process</div></a>
@@ -254,7 +254,7 @@
           </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
-               <a href="/">Why Work With Us</a>
+               <a href="">Why Work With Us</a>
               </div>    
             </div>
            <div class="col-4 footer-nav">
@@ -312,7 +312,7 @@
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="../welcome/">Welcome</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="../what-we-do/">What We Do</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../who-we-are/">Who We Are</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="/">Why Work With Us</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../our-process/">Our Process</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../deliverables/">Deliverables</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="../contact-us/">Contact Us</a></li>
