--- a/our-process/index.html
+++ b/our-process/index.html
@@ -95,7 +95,7 @@
                             <a href="../why-work-with-us/"><div>Why Work With Us</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467 current_page_item current_page_parent">
-                            <a href="/"><div>Our Process</div></a>
+                            <a href=""><div>Our Process</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                             <a href="../deliverables/"><div>Deliverables</div></a>
@@ -201,7 +201,7 @@
             </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
-               <a href="/">Our Process</a>
+               <a href="">Our Process</a>
               </div>    
             </div>
           </div>
@@ -245,7 +245,7 @@
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="../what-we-do/">What We Do</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../who-we-are/">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/">Why Work With Us</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="/">Our Process</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="">Our Process</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../deliverables/">Deliverables</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="../contact-us/">Contact Us</a></li>
   </ul>
