--- a/welcome/index.html
+++ b/welcome/index.html
@@ -82,7 +82,7 @@
                       <div class="nav-container">
                         <ul id="menu-top-menu" class="nav-menu">
                           <li id="menu-item-465" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465 current_page_item current_page_parent">
-                            <a href="/"><div>Welcome</div></a>
+                            <a href=""><div>Welcome</div></a>
                           </li>
                           <li id="menu-item-466" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466">
                             <a href="../what-we-do/"><div>What We Do</div></a>
@@ -161,7 +161,7 @@
             </div>
          <div class="col-4 footer-nav">
           <div class="menu-main-menu-container">
-           <a href="/">Welcome</a>
+           <a href="">Welcome</a>
          </div>    
           </div>
             <div class="col-4 footer-nav">
@@ -221,7 +221,7 @@
    <div id="wprmenu_menu" class="wprmenu_levels left wprmenu_custom_icons">
   <ul id="wprmenu_menu_ul">
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-469"><a href="../">Home</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="/">Welcome</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="">Welcome</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="../what-we-do/">What We Do</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../who-we-are/">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/">Why Work With Us</a></li>
