--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -88,7 +88,7 @@
                             <a href="../what-we-do/"><div>What We Do</div></a>
                           </li>
                           <li id="menu-item-468" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468 current_page_item current_page_parent">
-                            <a href="/"><div>Who We Are</div></a>
+                            <a href=""><div>Who We Are</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                             <a href="../why-work-with-us/"><div>Why Work With Us</div></a>
@@ -203,7 +203,7 @@ diagnostics, and telehealth/ehealth.</p>
               </div>
              <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
-               <a href="/">Who We Are</a>
+               <a href="">Who We Are</a>
              </div>    
            </div>
             <div class="col-4 footer-nav">
@@ -275,7 +275,7 @@ diagnostics, and telehealth/ehealth.</p>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-469"><a href="../">Home</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="../welcome/">Welcome</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="../what-we-do/">What We Do</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="/">Who We Are</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../our-process/">Our Process</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../deliverables/">Deliverables</a></li>
