--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
     gtag('config', 'UA-108381604-3');
   </script>
 <script>/*<![CDATA[*/window.zE||(function(e,t,s){var n=window.zE=window.zEmbed=function(){n._.push(arguments)}, a=n.s=e.createElement(t),r=e.getElementsByTagName(t)[0];n.set=function(e){ n.set._.push(e)},n._=[],n.set._=[],a.async=true,a.setAttribute("charset","utf-8"), a.src="https://static.zdassets.com/ekr/asset_composer.js?key="+s, n.t=+new Date,a.type="text/javascript",r.parentNode.insertBefore(a,r)})(document,"script","ce7d5d11-2425-45db-b86a-fb09f0167e6d");/*]]>*/</script>
+<style>
+  #preview{
+  position:absolute;
+  border:1px solid #ccc;
+  background:#ccc;
+  padding:1px;
+  display:none;
+  color:#fff;
+  }
+  #preview img{
+    width:400px;
+  }
+</style>
 </head>
 <body style="background-color: #000">
   <div class="container-fluid h-100" id="shop-outer">
@@ -32,7 +45,7 @@
               <div class="col-6">
                 <!--<img id="shirt-img" src="../img/shirt-grease.png"/>-->
                 <!--<img id="shirt-img" src="../img/shirt-grease2.jpg"/>-->
-                <img id="shirt-img" src="img/shirt-grease3.png"/>
+                <a href="img/shirt-grease2.jpg" class="preview"><img id="shirt-img" src="img/shirt-grease3.png"/></a>
               </div>
             </div>
             <div class="row">
